--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AlbionaHoti/react_admin_dashboard",
+  "homepage": "https://github.com/minhnguyenwp",
   "name": "ReactAdminDashboard",
   "version": "0.1.0",
   "private": true,
